cerco di inserire un div in appendchild

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@400;600&family=Vidaloka&display=swap"
     rel="stylesheet" />
-  <script src="js.js" type="text/javascript" defer></script>
+  <script src="script.js" type="text/javascript" defer></script>
 </head>
 
 <body>
