--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@400;600&family=Vidaloka&display=swap"
     rel="stylesheet" />
-  <script src="script.js" type="text/javascript" defer></script>
 </head>
 
 <body>
@@ -52,6 +51,7 @@
       </div>
     </div>
   </section>
+  <script src="script.js" type="text/javascript"></script>
 </body>
 
 </html>
